--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "exif-parser": "^0.1.12"
   }
 }
