--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^2.3.1",
-    "normalize.css": "^8.0.0",
+    "normalize.css": "^8.0.1",
     "popper": "^1.0.1",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-grid-gallery": "^0.4.11",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-transition-group": "^2.3.1",
+    "react-transition-group": "^2.5.0",
     "sass": "^1.7.1"
   },
   "homepage": "./",
